<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music"
            android:title="@string/music"/>
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/leaderboard"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>
    
    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_wallet"
                android:icon="@drawable/ic_wallet"
                android:title="@string/wallet"/>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notifications"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu> 